# cocci

./: .gitignore  Dockerfile  README.md  base_fixtures_30_07_2025.json  build.sh  create_superuser.py  db_22_08_2025.sqlite3  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: deploy.yml
cocci/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
orders/: admin.py  context_processors.py  email.py  middleware.py  models.py  signals.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_orderitem_quantity_order_confirmed_and_more.py
orders/templates/: cart.html  checkout.html  order_confirmation.html
product/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_remove_product_name_product_barcode.py  0003_producthistory.py  0004_remove_producthistory_product_code_and_more.py  0005_category_productcategory.py  0006_product_out.py  0007_tag_producttag.py  0008_remove_productcategory_category_and_more.py  0009_product_penalty.py  0010_alter_product_title.py  0011_product_is_available.py  0012_order_cartitem_orderitem.py  0013_remove_orderitem_order_remove_orderitem_product_and_more.py  0014_remove_product_out.py  0015_alter_productimage_image.py
templates/: base.html  contacts.html  home.html  product_detail.html  store.html  vue_base.html
tests/: conftest.py  test_cart_flow.py  test_order_availability.py  test_product_api.py  test_store_view_parity.py
(+19 files in other folders)
