[project]
name = "cocci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "attrs==24.2.0",
    "brotli==1.1.0",
    "click==8.1.8",
    "dj-database-url==2.3.0",
    "django==5.1.3",
    "django-extensions==3.2.3",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.27.2",
    "drf-yasg==1.21.8",
    "factory-boy==3.3.1",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "inflection==0.5.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "packaging==24.2",
    "pillow==11.0.0",
    "psycopg2-binary==2.9.10",
    "pytest==8.3.3",
    "pytest-django==4.9.0",
    "python-barcode==0.15.1",
    "python-dotenv>=1.2.2",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "rpds-py==0.21.0",
    "sqlparse==0.5.1",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "uvicorn==0.34.0",
    "whitenoise==6.8.2",
]
